--- a/doc/index.docbook
+++ b/doc/index.docbook
@@ -1,5 +1,6 @@
 <?xml version="1.0" ?>
-<!DOCTYPE book PUBLIC "-//KDE//DTD DocBook XML V4.1-Based Variant V1.0//EN" "/usr/share/apps/ksgmltools2/customization/dtd/kdex.dtd" [
+<!DOCTYPE book PUBLIC "-//KDE//DTD DocBook XML V4.1.2-Based Variant V1.1//EN"
+ "dtd/kdex.dtd" [
 
 <!ENTITY introduction-chapter SYSTEM "introduction.docbook">
 <!ENTITY installation-chapter SYSTEM "installation.docbook">
