Corrected language to work with translations
svn path=/trunk/kdesdk/doc/umbrello/; revision=204334

--- a/doc/index.docbook
+++ b/doc/index.docbook
@@ -20,7 +20,7 @@
        from kde-genent.entities and $LANG/user.entities. -->
 ]>
 
-<book id="Umbrello" lang="en">
+<book id="Umbrello" lang="&language;">
 <bookinfo>
 <title>Umbrello UML Modeller Handbook</title>
 
